Update message GetServerInfoResponse
